update content in date_constructor.html update content in date_timestring.html

--- a/html/date_constructor.html
+++ b/html/date_constructor.html
@@ -265,7 +265,8 @@ Date() </pre><!-- code-content -->
             <li><code>Date()</code>
               <ol>
                 <li>
-                  Calling the Date() function strong{without the new keyword} returns a string representation of the
+                  Calling the Date() function <strong>without the new keyword</strong> returns a string representation
+                  of the
                   current date and time,
                   exactly as <code>new Date().toString()</code> does
                 <li>
@@ -341,7 +342,7 @@ myutcdate </pre><!-- code-content -->
         </article>
 
         <article>
-          <h1 class="count">Code Example 700</h1>
+          <h1 class="count">Code Example</h1>
           <details open><!--details CODE-->
             <summary class="details-code-summary">[JavaScript Inserts]</summary>
             <pre class="details-code-aclass">
@@ -368,11 +369,11 @@ mydy.toISOString() </pre><!-- code-content -->
         </article>
 
 
-<article>
-    <h1 class="count">Code Example Fixed</h1>
-    <details open><!--details CODE-->
-        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-        <pre class="details-code-aclass">
+        <article>
+          <h1 class="count">Code Example</h1>
+          <details open><!--details CODE-->
+            <summary class="details-code-summary">[JavaScript Inserts]</summary>
+            <pre class="details-code-aclass">
 const nd1 = Date()
 const nd2 = Date(2000, 02, 18)
 const nd3 = Date("2000-03-18")
@@ -380,16 +381,16 @@ const nd3 = Date("2000-03-18")
 nd1
 nd2
 nd3 </pre><!-- code-content -->
-    </details><!--details CODE-->
+          </details><!--details CODE-->
 
-    <br class="small-view">
-    <br class="wide-view">
+          <br class="small-view">
+          <br class="wide-view">
 
-    <details open><!--Details CONSOLE -->
-        <summary class="details-console-summary">
-            [JavaScript Inserts]
-        </summary>
-        <pre class="details-console-aclass small-view">
+          <details open><!--Details CONSOLE -->
+            <summary class="details-console-summary">
+              [JavaScript Inserts]
+            </summary>
+            <pre class="details-console-aclass small-view">
 'Wed Aug 06 2025 15:59:30 GMT+0100 
     (Irish Standard Time)'
 
@@ -399,7 +400,7 @@ nd3 </pre><!-- code-content -->
 'Wed Aug 06 2025 16:00:10 GMT+0100 
     (Irish Standard Time)' </pre><!-- small-view -->
 
-        <pre class="details-console-aclass wide-view">
+            <pre class="details-console-aclass wide-view">
 'Wed Aug 06 2025 15:59:30 GMT+0100 
     (Irish Standard Time)'
 
@@ -408,9 +409,9 @@ nd3 </pre><!-- code-content -->
 
 'Wed Aug 06 2025 16:00:10 GMT+0100 
     (Irish Standard Time)' </pre><!-- wide-view -->
-    </details><!--details CONSOLE -->
+          </details><!--details CONSOLE -->
 
-</article>
+        </article>
 
         </article>
 
