--- a/html/date_timestring.html
+++ b/html/date_timestring.html
@@ -423,8 +423,7 @@ console.log(d) </pre><!-- code-content -->
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-INSERT CODE TWO
-  </pre><!-- code-content -->
+Date("bejasus") </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -435,11 +434,9 @@ INSERT CODE TWO
                             [JavaScript Inserts]
                         </summary>
                         <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT TWO (small view) 
-</pre><!-- small-view -->
+'Sun Aug 24 2025 16:31:22 GMT+0100 (Irish Standard Time)' </pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT TWO (wide view) 
-</pre><!-- wide-view -->
+'Sun Aug 24 2025 16:31:22 GMT+0100 (Irish Standard Time)' </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
 
                 </article>
