update content in date_constructor.html

--- a/html/date_constructor.html
+++ b/html/date_constructor.html
@@ -357,7 +357,7 @@ mydy.toISOString() </pre><!-- code-content -->
           <br class="wide-view">
 
           <details open><!--Details CONSOLE -->
-            <summary class="details-console-summary">
+            <summary class="details-console-summary">x
               [JavaScript Inserts]
             </summary>
             <pre class="details-console-aclass small-view">
