update content in function_scope.html

--- a/html/function_scope.html
+++ b/html/function_scope.html
@@ -257,7 +257,7 @@ test(5); // 5 </pre><!-- code-content -->
                             scope using <code>var</code> when the
                             original was declared with <code>let</code> or <code>const</code>
                         <li>
-                            JavaScript treats this as a syntax error because code{let} and <code>const</code> are
+                            JavaScript treats this as a syntax error because <code>let</code> and <code>const</code> are
                             block-scoped and cannot
                             be overridden by a <code>var</code> (which
                             is function-scoped and hoisted)
