correct typo (curly braces to parentheses) in equality.html

--- a/html/equality.html
+++ b/html/equality.html
@@ -150,7 +150,7 @@ why is str1 == str2?
             <li>
               <code>str</code> → a primitive string value: <code>"hello"</code>
             <li>
-              <code>str2</code> → a String object: <code>String { "hello" }</code>
+              <code>str2</code> → a String object: <code>String9"hello")</code>
             <li>
               This is not a primitive; its an object with properties and methods
             <li> <code>==</code> (loose equality) in JavaScript performs type coercion if the operands are of different
