correct typo in do_while.html

--- a/html/do_while.html
+++ b/html/do_while.html
@@ -208,6 +208,8 @@ console.log(i); </pre><!-- code-content -->
           <details open><!--details CODE-->
             <summary class="details-code-summary">[JavaScript Inserts]</summary>
             <pre class="details-code-aclass">
+let i = 0; 
+
 do {
   if(i==0) {
     i++;
