correct typo (.yimg2 to myimg2) in on_click.html

--- a/html/on_click.html
+++ b/html/on_click.html
@@ -227,7 +227,7 @@ INSERT CONSOLE OUTPUT ONE(small view)
 const myimg2 = document.getElementById('myimg2');
 
 function switchImg2() {
- . yimg2.src = "../images/confirm.png";
+ myimg2.src = "../images/confirm.png";
 }
 
 myimg2.addEventListener('click', switchImg2)
